force-app/main/default/objects/leaseworks__Portal_Asset_Selected__c/leaseworks__Portal_Asset_Selected__c.object-meta.xml
<CustomObject>
    <description>Holds the requested assets information</description>
    <label>Asset Selected</label>
    <nameField>
        <label>Asset Selected Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets Selected</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>