force-app/main/default/objects/leaseworks__Portal_Asset_Selected__c/fields/leaseworks__Assembly__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated assembly</description>
    <inlineHelpText>Associated assembly</inlineHelpText>
    <label>Assembly</label>
    <referenceTo>leaseworks__Constituent_Assembly__c</referenceTo>
    <relationshipLabel>Assets Selected</relationshipLabel>
    <relationshipName>Portal_Assets_Selected</relationshipName>
    <type>Lookup</type>
</CustomField>