force-app/main/default/objects/leaseworks__Portal_Asset_Selected__c/fields/leaseworks__Available_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Available_Date__c</fullName>
    <description>Date from which the asset would be available</description>
    <inlineHelpText>Date from which the asset would be available</inlineHelpText>
    <label>Available Date</label>
    <type>Date</type>
</CustomField>