force-app/main/default/objects/leaseworks__Portal_Asset_Selected__c/fields/leaseworks__Engine_Condition__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Condition__c</fullName>
    <description>Engine condition based on the availability and maintenance status</description>
    <inlineHelpText>Engine condition based on the availability and maintenance status</inlineHelpText>
    <label>Engine Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>