force-app/main/default/objects/leaseworks__Portal_Asset_Selected__c/fields/leaseworks__Est_Green_Time_MO__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Est_Green_Time_MO__c</fullName>
    <description>Estimated remaining life in months</description>
    <formula>IF((leaseworks__Portal_Asset_Request__r.leaseworks__Assumed_Monthly_FH__c == 0 || leaseworks__Portal_Asset_Request__r.leaseworks__Assumed_Monthly_FC__c == 0), 0,
MIN(
NULLVALUE(leaseworks__Assembly__r.leaseworks__Remaining_Life_FH_Calculated__c,0)/ leaseworks__Portal_Asset_Request__r.leaseworks__Assumed_Monthly_FH__c, NULLVALUE(leaseworks__Assembly__r.leaseworks__Remaining_Life_FC_Calculated__c,0)/leaseworks__Portal_Asset_Request__r.leaseworks__Assumed_Monthly_FC__c 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated remaining life in months</inlineHelpText>
    <label>Est Green Time(MO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>