force-app/main/default/objects/leaseworks__Portal_Asset_Selected__c/fields/leaseworks__Est_Remaining_Life_FC_FH__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Est_Remaining_Life_FC_FH__c</fullName>
    <description>Estimated remaining life in flight hours and cycles based on average utilization</description>
    <formula>IF(TEXT(leaseworks__Assembly__r.leaseworks__Remaining_Life_FC_Calculated__c)==&#39;&#39;,&#39;NONE&#39;,TEXT(leaseworks__Assembly__r.leaseworks__Remaining_Life_FC_Calculated__c)) &amp; &quot;/&quot; &amp; IF(TEXT(leaseworks__Assembly__r.leaseworks__Remaining_Life_FH_Calculated__c)==&#39;&#39;,&#39;NONE&#39;,TEXT(leaseworks__Assembly__r.leaseworks__Remaining_Life_FH_Calculated__c))</formula>
    <inlineHelpText>Estimated remaining life in flight hours and cycles based on average utilization</inlineHelpText>
    <label>Est Remaining Life FC/FH</label>
    <type>Text</type>
</CustomField>