force-app/main/default/objects/leaseworks__Portal_Asset_Selected__c/fields/leaseworks__Rent_Up_To_Unit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Up_To_Unit__c</fullName>
    <description>Rate basis for the rent</description>
    <inlineHelpText>Rate basis for the rent</inlineHelpText>
    <label>Rent Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MO</fullName>
                <default>true</default>
                <label>MO</label>
            </value>
            <value>
                <fullName>FC</fullName>
            </value>
            <value>
                <fullName>FH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>