force-app/main/default/objects/leaseworks__Portal_Asset_Selected__c/fields/leaseworks__Requested__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the asset was originally requested by the Lessee</description>
    <inlineHelpText>Indicates whether the asset was originally requested by the Lessee</inlineHelpText>
    <label>Requested</label>
    <type>Checkbox</type>
</CustomField>